--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.2.0",
+    "joi-objectid": "^3.0.1",
     "lodash": "^4.17.20",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.0",
