--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "joi": "^17.2.0",
     "joi-objectid": "^3.0.1",
     "lodash": "^4.17.20",
