--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "compression": "^1.7.4",
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
+    "helmet": "^4.1.0",
     "joi": "^17.2.0",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
